# OLC_NAS_Tools

./: .gitignore  README.md  list.txt  nastools.py  pyproject.toml  seqids.txt  settings.py  setup.py
.github/workflows/: publish.yml
nastools/: nastools.py  version.py
olcnastools.egg-info/: PKG-INFO
recipes/: meta.yaml
