[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olcnastools"
version = "1.2.0"
description = ""
readme = "README.md"
authors = [
  { name = "Adam Koziol, Andrew Low, Forest Dussault", email = "adam.koziol@inspection.gc.ca" }
]
urls = { "homepage" = "https://github.com/OLC-Bioinformatics/OLC_NAS_Tools" }
requires-python = ">=3.8"

[project.scripts]
nastools = "nastools.nastools:main"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
